--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   web_socket_channel: ^2.3.0
   http_parser: ^4.0.2
   http_server: ^1.0.0
+  mime: ^1.0.0
+  shelf_multipart: ^1.0.0
 
 
 
